# emily-os

./: .gitignore  Cargo.toml  Makefile
crates/em-kernel/: Cargo.toml
crates/em-kernel/src/: console.rs  error.rs  exception.rs  main.rs  panic.rs  sync.rs  time.rs  utils.rs
crates/em-kernel/src/arch/: mod.rs
crates/em-kernel/src/arch/aarch64/: boot.rs  boot.s  cpu.rs  exception.rs  mod.rs  sync.rs  time.rs
crates/em-kernel/src/arch/aarch64/memory/: mod.rs  translation_table.rs
crates/em-kernel/src/board/: mod.rs
crates/em-kernel/src/board/raspi/: devices.rs  kernel.ld  memory.rs  mod.rs
crates/em-kernel/src/board/raspi/bcm/: gpio.rs  mod.rs  pl011_uart.rs
crates/em-kernel/src/driver/: mod.rs
crates/em-kernel/src/memory/: mod.rs
script/: bootstrap  build  configure  qemu
script/config/: arch_aarch64.sh  board_raspi3.sh
script/helpers/: _utils.sh  load_config.sh
