[package]
name = "em-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
board_raspi3 = ["tock-registers"]
board_raspi4 = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]

[dependencies.tock-registers]
version = "0.8.1"
default-features = false
features = ["register_types"]
optional = true

# Architecture-specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.3.1"
